@@ -1,4 +1,5 @@
 0.14
+ - Update copyright years.
 
 0.13 2023-01-26T19:13:52+01:00
  - Add check for year in interval of 'dt_from' and 'dt_to' in
